Add some colors & use raw SVG logo

--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <div class="h-full flex items-center">
-    <img src="assets/icon-raw.svg" class="h-full px-3 py-2">
+    <svg class="h-full px-3 py-2 w-24">
+        <use x="0" y="0" href="assets/icon-raw.svg#logo"></use>
+    </svg>
     <span>Farkas Gábor e.v.</span>
 </div>
 
