--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -1,12 +1,13 @@
 <div class="h-full flex items-center">
+    <!-- Include raw SVG to easily change its color -->
     <svg class="h-full px-3 py-2 w-24">
-        <use x="0" y="0" href="assets/icon-raw.svg#logo"></use>
+        <use href="assets/icon-raw.svg#logo"></use>
     </svg>
     <span>Farkas Gábor e.v.</span>
 </div>
 
-<div class="overflow-hidden md:flex" [ngClass]="{'max-md:h-0': !expanded}">
-    <nav-dropdown *ngFor="let item of navItems | keyvalue" [label]="item.key" [items]="item.value"></nav-dropdown>
+<div class="nav-container max-md:overflow-hidden md:flex md:h-full md:px-12" [ngClass]="{'max-md:h-0': !expanded}">
+    <nav-dropdown class="md:h-full md:flex items-center" *ngFor="let item of navItems | keyvalue" [label]="item.key" [items]="item.value"></nav-dropdown>
 </div>
 
 <fa-icon [icon]="togglerIcon" size="xl" class="absolute right-3 vertical-center md:hidden" (click)="toggle()"></fa-icon>
