--- a/src/components/nav-dropdown/nav-dropdown.component.html
+++ b/src/components/nav-dropdown/nav-dropdown.component.html
@@ -1,6 +1,8 @@
-<div (mouseover)="expanded = true" (mouseout)="expanded = false">
-    <label class="max-md:hidden">{{label}}</label>
-    <ul class="overflow-hidden md:absolute" [ngClass]="{ 'md:h-0': !expanded }">
-        <li *ngFor="let navItem of items"><a [href]="navItem.url">{{navItem.label}}</a></li>
-    </ul>
+<div class="menu-target h-full" (mouseover)="expanded = true" (mouseout)="expanded = false">
+    <div class="menu-container h-full relative">
+        <label class="max-md:hidden h-full flex items-center md:px-10"><span>{{label}}</span></label>
+        <ul class="overflow-hidden md:absolute md:pt-5" [ngClass]="{ 'md:h-0': !expanded }">
+            <li class="md:pb-5" *ngFor="let navItem of items"><a class="px-5 md:whitespace-nowrap" [href]="navItem.url">{{navItem.label}}</a></li>
+        </ul>
+    </div>
 </div>
