--- a/src/components/nav-dropdown/nav-dropdown.component.html
+++ b/src/components/nav-dropdown/nav-dropdown.component.html
@@ -1,7 +1,7 @@
 <div class="menu-target h-full" (mouseover)="expanded = true" (mouseout)="expanded = false">
     <div class="menu-container h-full relative">
         <label class="max-md:hidden h-full flex items-center md:px-10"><span>{{label}}</span></label>
-        <ul class="overflow-hidden md:absolute md:pt-5" [ngClass]="{ 'md:h-0': !expanded }">
+        <ul class="overflow-hidden md:absolute" [ngClass]="{ 'md:max-h-0': !expanded, 'md:max-h-40': expanded }">
             <li class="md:pb-5" *ngFor="let navItem of items"><a class="px-5 md:whitespace-nowrap" [href]="navItem.url">{{navItem.label}}</a></li>
         </ul>
     </div>
