Add footer & fix navbar menu on mobile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<nav class="navbar h-20 md:flex justify-between items-center relative"></nav>
+<nav class="navbar md:flex justify-between items-center md:h-16"></nav>
 <router-outlet />
+<footer></footer>
