--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="w-full md:w-3/6 text-lg flex justify-center">
+<div class="w-full md:w-3/6 text-lg flex justify-center text-primary">
     <div class="grid grid-rows-3 grid-cols-2 gap-5 pb-10 pt-14 items-center justify-items-center">
         <svg class="px-3 w-20 h-16">
             <use href="assets/icon-raw.svg#logo"></use>
