--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,8 @@
 @tailwind utilities;
 
 :root {
-    --primary-color: #dfefff;
-    --primary-accent: #5fa2e4;
+    --primary-color: #eaf8fe;
+    --primary-accent: #0284c7;
     --secondary-color: #fffbdcaf;
     --secondary-accent: #ffc40d;
 }
@@ -29,5 +29,13 @@ body {
 
     .bg-primary {
         background-color: var(--primary-color);
+    }
+
+    .text-primary {
+        color: var(--primary-color);
+    }
+
+    .text-primary-accent {
+        color: var(--primary-accent);
     }
 }
