--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,14 +1,19 @@
-<div class="w-full md:w-3/6 text-lg flex justify-center text-primary">
-    <div class="grid grid-rows-3 grid-cols-2 gap-5 pb-10 pt-14 items-center justify-items-center">
-        <svg class="px-3 w-20 h-16">
-            <use href="assets/icon-raw.svg#logo"></use>
-        </svg>
-        <span class="justify-self-start">Farkas Gábor e.v.</span>
-        <fa-icon [icon]="marker" size="lg"></fa-icon>
-        <span class="justify-self-start">Pécs, Hungary</span>
-        <fa-icon [icon]="email" size="lg"></fa-icon>
-        <span class="justify-self-start">farkasgaborev&#64;valami.hu</span>
-    </div>
+<div class="flex text-primary">
+    <div class="w-full md:w-3/6 text-lg flex justify-center">
+        <div class="grid grid-rows-3 grid-cols-2 gap-5 pb-10 pt-14 items-center justify-items-center">
+            <svg class="px-3 w-20 h-16">
+                <use href="assets/icon-raw.svg#logo"></use>
+            </svg>
+            <span class="justify-self-start">Farkas Gábor e.v.</span>
+            <fa-icon [icon]="marker" size="lg"></fa-icon>
+            <span class="justify-self-start">Pécs, Hungary</span>
+            <fa-icon [icon]="email" size="lg"></fa-icon>
+            <span class="justify-self-start">farkasgaborev&#64;valami.hu</span>
+        </div>
 
+    </div>
+    <div class="hidden md:block md:w-3/6 max-h-full">
+        <div #map class="h-full"></div>
+    </div>
 </div>
-<div class="hidden md:block md:w-3/6"></div>
+<p class="text-primary text-sm pt-2 text-center">Copyright © 2024 Gábor Farkas</p>
