--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -18,4 +18,4 @@
         }
     </div>
 </div>
-<p class="text-primary text-sm pt-2 text-center">Copyright © 2024 Gábor Farkas</p>
+<p class="text-primary text-sm pt-2 text-center">Copyright © 2024 Gábor Farkas | Hosted by GitHub Pages</p>
