--- a/src/components/carousel/carousel.component.html
+++ b/src/components/carousel/carousel.component.html
@@ -2,14 +2,14 @@
     [style.transform]="'translateX(' + currSlide * 100 + '%)'">
     <ng-content></ng-content>
 </div>
-<div *ngIf="pageSwitcher" class="absolute w-full h-full top-0 left-0 flex justify-between">
-    <div *ngIf="pageSwitcher" class="h-full flex justify-center items-center">
-        <fa-icon [icon]="angleLeft" size="2x" class="pl-5"
+<div *ngIf="pageSwitcher" class="absolute w-full h-full top-0 left-0 flex justify-between pointer-events-none">
+    <div class="h-full flex justify-center items-center">
+        <fa-icon [icon]="angleLeft" size="2x" class="pl-5 pointer-events-auto"
             [ngClass]="{'md:cursor-pointer': currSlide > 0, 'disabled': currSlide === 0}"
             (click)="previousSlide()"></fa-icon>
     </div>
-    <div *ngIf="pageSwitcher" class="h-full flex justify-center items-center">
-        <fa-icon [icon]="angleRight" size="2x" class="pr-5 md:cursor-pointer"
+    <div class="h-full flex justify-center items-center">
+        <fa-icon [icon]="angleRight" size="2x" class="pr-5 pointer-events-auto"
             [ngClass]="{'md:cursor-pointer': currSlide < numSlides - 1, 'disabled': currSlide === numSlides - 1}"
             (click)="nextSlide()"></fa-icon>
     </div>
