--- a/src/components/hero-scene/hero-scene.component.css
+++ b/src/components/hero-scene/hero-scene.component.css
@@ -11,7 +11,7 @@
     background-repeat: repeat;
     background-size: auto 100%;
     background-position: 0 0;
-    animation: scrollBg 5s linear infinite;
+    animation: scrollBg 50s linear infinite;
     top: 5px;
     right: 5px;
 }
@@ -45,7 +45,7 @@
         background-position: 0 0;
     }
     100% {
-        background-position: 155% 0;
+        background-position: 1550% 0;
     }
 }
 
@@ -67,4 +67,31 @@
     100% {
         transform: scale(1) translate(1);
     }
+}
+
+.hero-text {
+    bottom: 10%;
+    left: 7%;
+}
+
+.hero-arrow {
+    opacity: 0;
+    right: 5%;
+    bottom: 120%;
+    animation: appear 1s 2s forwards;
+}
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.scientist-text {
+    bottom: 20%;
+    left: calc(100% - 4rem);
+    white-space: pre;
 }
