Add 2nd hero scene

--- a/src/components/carousel/carousel.component.html
+++ b/src/components/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<div #carousel class="carousel-slide-container flex overflow-x-hidden w-full h-full relative"
+<div #carousel class="carousel-slide-container flex w-full h-full relative"
     [style.transform]="'translateX(-' + currSlide * 100 + '%)'">
     <ng-content></ng-content>
 </div>
