Auto-start carousel & add mobile improvements

--- a/src/components/hero-scene/hero-scene.component.html
+++ b/src/components/hero-scene/hero-scene.component.html
@@ -55,5 +55,8 @@
                 <div class="cabin-sketch typewriter text-xl" [duration]="2000" [delay]="10000" [textContent]="'The guy with the research experience'"></div>
             }
         </div>
+        <div class="attribution absolute right-0 bottom-0">
+            <a href="http://www.freepik.com">Adapted from designs by Freepik</a>
+        </div>
     </div>
 </div>
