--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
             <use href="assets/icon-raw.svg#logo"></use>
         </svg>
     </a>
-    <span>Farkas Gábor e.v.</span>
+    <span class="max-lg:hidden">Farkas Gábor e.v.</span>
 
     <fa-icon [icon]="togglerIcon" size="xl" class="absolute right-3 vertical-center md:hidden" (click)="toggle()"></fa-icon>
 </div>
