--- a/src/components/hero-scene/hero-scene.component.html
+++ b/src/components/hero-scene/hero-scene.component.html
@@ -4,17 +4,17 @@
             <div class="wall w-full"></div>
             <div class="skirt w-full"></div>
             <div class="floor w-full flex justify-end items-end">
-                <div class="attribution">
+                <div class="attribution opaque-bg">
                     <a href="http://www.freepik.com">Adapted from designs by upklyak / macrovector / Freepik</a>
                 </div>
             </div>
         </div>
-        <img class="absolute top-0 left-12 h-2/4 max-w-2/5" src="assets/blackboard.png">
-        <div class="absolute bottom-0 left-0 h-3/5">
+        <img class="absolute top-8 sm:top-0 left-2 sm:left-12 max-w-2/5" src="assets/blackboard.png">
+        <div class="absolute bottom-0 left-0 h-2/5 sm:h-3/5">
             <img class="h-full" src="assets/scientist.png">
-            <div class="scientist-text absolute">
-                <img class="w-2 absolute bottom-6" src="assets/pointing-arrow.png">
-                <span class="cabin-sketch">This is me, making sure you're able to do your best</span>
+            <div class="scientist-text absolute sm:whitespace-pre">
+                <img class="w-2 absolute bottom-12 sm:bottom-6" src="assets/pointing-arrow.png">
+                <span class="cabin-sketch text-sm sm:text-base text-center">This is me, making sure you're able to do your best</span>
             </div>
         </div>
 
@@ -24,7 +24,7 @@
             <div class="hero-text absolute" #heroText>
                 @defer (on viewport(heroText)) {
                     <img class="w-2 absolute hero-arrow" src="assets/pointing-arrow.png">
-                    <div class="cabin-sketch typewriter" [duration]="2000" [textContent]="'This is you, making the world a better place'"></div>
+                    <div class="cabin-sketch typewriter text-sm xl:text-base text-center" [duration]="2000" [textContent]="'This is you, making the world a better place'"></div>
                 }
             </div>
         </div>
@@ -33,7 +33,7 @@
 
     <div *ngIf="heroScene === HeroScene.COUNSEL" class="w-full h-full relative scene-counsel">
         <div class="counsel-bg w-full h-full">
-            <div class="attribution absolute right-0 bottom-0">
+            <div class="attribution opaque-bg absolute right-0 bottom-0">
                 <a href="http://www.freepik.com">Adapted from designs by upklyak / brgfx / Freepik</a>
             </div>
         </div>
@@ -51,11 +51,11 @@
         <canvas #wallOfFame class="absolute top-0 h-full frame-wall" [style]="{'width': wallOfFameWidth + 'rem'}"></canvas>
         <div class="research-text absolute w-1/2">
             @defer (on viewport(researchScene)) {
-                <img class="w-4 absolute" src="assets/pointing-arrow.png">
-                <div class="cabin-sketch typewriter text-xl" [duration]="2000" [delay]="10000" [textContent]="'The guy with the research experience'"></div>
+                <img class="w-4 absolute bottom-4 sm:bottom-0 left-4 sm:left-0" src="assets/pointing-arrow.png">
+                <div class="cabin-sketch typewriter text-xl text-center" [textClass]="'opaque-bg sm:bg-transparent'" [duration]="2000" [delay]="10000" [textContent]="'The guy with the research experience'"></div>
             }
         </div>
-        <div class="attribution absolute right-0 bottom-0">
+        <div class="attribution opaque-bg absolute right-0 bottom-0">
             <a href="http://www.freepik.com">Adapted from designs by Freepik</a>
         </div>
     </div>
