Add leader for large screens

--- a/src/components/hero-scene/hero-scene.component.html
+++ b/src/components/hero-scene/hero-scene.component.html
@@ -9,7 +9,7 @@
                 </div>
             </div>
         </div>
-        <img class="absolute top-8 sm:top-0 left-2 sm:left-12 max-w-2/5" src="assets/blackboard.png">
+        <img class="absolute top-8 sm:top-0 left-2 sm:left-12 max-w-2/5 md:h-2/4" src="assets/blackboard.png">
         <div class="absolute bottom-0 left-0 h-2/5 sm:h-3/5">
             <img class="h-full" src="assets/scientist.png">
             <div class="scientist-text absolute sm:whitespace-pre">
