--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="h-16 md:h-full flex items-center relative">
+<div class="h-16 md:h-full flex items-center relative xl:text-lg">
     <a href="/" class="h-full">
         <!-- Include raw SVG to easily change its color -->
         <svg class="h-full px-3 py-2 w-20 cursor-pointer">
