--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <nav class="navbar md:flex justify-between items-center md:h-16"></nav>
 <router-outlet />
-<footer></footer>
+<footer class="bg-primary-accent"></footer>
