--- a/src/components/reference/reference.component.html
+++ b/src/components/reference/reference.component.html
@@ -1,13 +1,22 @@
-<a [href]="url" class="anchor">
-    <span class="text-6xl text-primary-accent relative">&#x2B22;</span>
-</a>
+
+<ng-container *ngTemplateOutlet="url ? anchor : hexagon; context: {customClass: 'anchor'}"></ng-container>
 <div *ngIf="flyoutText"
     [class]="'pointer-events-none flyout-container absolute h-full top-0 left-0 invisible ' + flyoutOrientation"
     [ngClass]="{'flip': flyoutFlip}">
-    <span class="text-6xl text-primary-accent">&#x2B22;</span>
+    <ng-container *ngTemplateOutlet="hexagon"></ng-container>
     <span class="pointer-events-auto relative flex items-center flyout-text bg-primary-accent text-xs xl:text-sm overflow-hidden text-primary">{{flyoutText}}</span>
-    <span class="relative flyout-right text-6xl text-primary-accent">&#x2B22;</span>
+    <ng-container *ngTemplateOutlet="hexagon; context: {customClass: 'flyout-right'}"></ng-container>
 </div>
 <div class="pointer-events-none absolute w-full h-full top-0 left-0 flex justify-center items-center">
     <ng-content select="[referenceIcon]"></ng-content>
 </div>
+
+<ng-template #hexagon let-customClass="customClass">
+    <span [class]="'text-6xl text-primary-accent relative ' + customClass">&#x2B22;</span>
+</ng-template>
+
+<ng-template #anchor>
+    <a [href]="url" class="anchor">
+        <ng-container *ngTemplateOutlet="hexagon"></ng-container>
+    </a>
+</ng-template>
